added prisma client globally

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -10,5 +10,8 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.15.0"
+  },
+  "export": {
+    "./client": "./src/index.ts"
   }
 }
